[add] card structure and effect

--- a/index.html
+++ b/index.html
@@ -1,13 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boolando</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Boolando</title>
 
-  <link rel="stylesheet" href="./assets/style/style.css">
-</head>
-<body>
-  
-</body>
+    <link rel="stylesheet" href="./assets/style/style.css" />
+  </head>
+
+  <body>
+    <header>HEADER</header>
+
+    <main>
+      <div class="container">
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/1.webp"
+              alt="T-shirt Levi's"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/1b.webp"
+              alt="T-shirt Levi's"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Levi's</div>
+            <div class="product">relaxed fit tee unisex</div>
+            <div>
+              <span class="discounted-price">14,99 &euro;</span
+              ><span class="full-price"> 29,99 &euro;</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/2.webp"
+              alt="T-shirt Guess"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/2b.webp"
+              alt="T-shirt Guess"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Guess</div>
+            <div class="product">roses tee</div>
+            <div>
+              <span class="discounted-price">20,99 &euro;</span
+              ><span class="full-price"> 29,99 &euro;</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/3.webp"
+              alt="Jumpsuit Come Zucchero Filato"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/3b.webp"
+              alt="Jumpsuit Come Zucchero Filato"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Come Zucchero Filato</div>
+            <div class="product">voglia di colori pastello</div>
+            <div>
+              <span class="discounted-price">129,99 &euro;</span
+              ><span class="full-price"> 184,99 &euro;</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/4.webp"
+              alt="T-shirt Levi's"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/4b.webp"
+              alt="T-shirt Levi's"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Levi's</div>
+            <div class="product">tee unisex</div>
+            <div>
+              <span class="discounted-price">14,99 &euro;</span
+              ><span class="full-price"> 29,99 &euro;</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/5.webp"
+              alt="Dress Maya Deluxe"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/5b.webp"
+              alt="Dress Maya Deluxe"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Maya Deluxe</div>
+            <div class="product">stripe bodice</div>
+            <div><span class="discounted-price">99,99 &euro;</span></div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top-card">
+            <img
+              class="default-img"
+              src="./assets/img/6.webp"
+              alt="Pullover Esprit"
+            />
+            <img
+              class="hover-img"
+              src="./assets/img/6b.webp"
+              alt="Pullover Esprit"
+            />
+          </div>
+          <div class="bottom-card">
+            <div class="brand">Esprit</div>
+            <div class="product">maglione - black</div>
+            <div><span class="discounted-price">29,99 &euro;</span></div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>FOOTER</footer>
+  </body>
 </html>
