[add] card relative elements - discount, sustainability and wish

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
               src="./assets/img/1b.webp"
               alt="T-shirt Levi's"
             />
+            <div class="wish">&hearts;</div>
+            <div class="tag">
+              <span class="discount">-50%</span>
+              <span class="sustainability">Sostenibilità</span>
+            </div>
           </div>
           <div class="bottom-card">
             <div class="brand">Levi's</div>
@@ -48,6 +53,10 @@
               src="./assets/img/2b.webp"
               alt="T-shirt Guess"
             />
+            <div class="wish">&hearts;</div>
+            <div class="tag">
+              <span class="discount">-30%</span>
+            </div>
           </div>
           <div class="bottom-card">
             <div class="brand">Guess</div>
@@ -71,6 +80,10 @@
               src="./assets/img/3b.webp"
               alt="Jumpsuit Come Zucchero Filato"
             />
+            <div class="wish">&hearts;</div>
+            <div class="tag">
+              <span class="discount">-30%</span>
+            </div>
           </div>
           <div class="bottom-card">
             <div class="brand">Come Zucchero Filato</div>
@@ -96,6 +109,11 @@
               src="./assets/img/4b.webp"
               alt="T-shirt Levi's"
             />
+            <div class="wish">&hearts;</div>
+            <div class="tag">
+              <span class="discount">-50%</span>
+              <span class="sustainability">Sostenibilità</span>
+            </div>
           </div>
           <div class="bottom-card">
             <div class="brand">Levi's</div>
@@ -119,6 +137,7 @@
               src="./assets/img/5b.webp"
               alt="Dress Maya Deluxe"
             />
+            <div class="wish">&hearts;</div>
           </div>
           <div class="bottom-card">
             <div class="brand">Maya Deluxe</div>
@@ -139,6 +158,10 @@
               src="./assets/img/6b.webp"
               alt="Pullover Esprit"
             />
+            <div class="wish">&hearts;</div>
+            <div class="tag">
+              <span class="sustainability">Sostenibilità</span>
+            </div>
           </div>
           <div class="bottom-card">
             <div class="brand">Esprit</div>
