--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolando</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="./assets/style/style.css" />
   </head>
 
   <body>
-    <header>HEADER</header>
+    <header>
+      <div class="container2">
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Donna</a></li>
+            <li><a href="#">Uomo</a></li>
+            <li><a href="#">Bambini</a></li>
+          </ul>
+        </nav>
+        <img id="logo" src="./assets/img/boolean-logo.png" alt="Logo boolean" />
+        <div class="icons">
+          <i class="fa-regular fa-user"></i>
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-bag-shopping"></i>
+        </div>
+      </div>
+    </header>
 
     <main>
       <div class="container">
