--- a/index.html
+++ b/index.html
@@ -195,6 +195,29 @@
       </div>
     </main>
 
-    <footer>FOOTER</footer>
+    <footer>
+      <div class="container2">
+        <div>
+          <h4>Boolando s.r.l</h4>
+          <nav>
+            <ul class="menu">
+              <li><a href="#">Informazioni legali</a></li>
+              <li><a href="#">Informativa sulla privacy</a></li>
+              <li><a href="#">DIritto di recesso</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="social">
+          <h4>Trovaci anche su</h4>
+          <div class="icons">
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-square-pinterest"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
