[refine] header and class name

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div>
           <h4>Boolando s.r.l</h4>
           <nav>
-            <ul class="menu">
+            <ul class="references">
               <li><a href="#">Informazioni legali</a></li>
               <li><a href="#">Informativa sulla privacy</a></li>
               <li><a href="#">DIritto di recesso</a></li>
