[refine] card container with wrap

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <div class="container2">
+      <div class="container">
         <nav>
           <ul class="menu">
             <li><a href="#">Donna</a></li>
@@ -117,9 +117,7 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="container">
         <div class="card">
           <div class="top-card">
             <img
@@ -196,7 +194,7 @@
     </main>
 
     <footer>
-      <div class="container2">
+      <div class="container">
         <div>
           <h4>Boolando s.r.l</h4>
           <nav>
@@ -210,11 +208,11 @@
         <div class="social">
           <h4>Trovaci anche su</h4>
           <div class="icons">
-            <i class="fa-brands fa-square-twitter"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-pinterest"></i>
-            <i class="fa-brands fa-square-youtube"></i>
+            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-pinterest"></i></a>
+            <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
           </div>
         </div>
       </div>
